[package]
name = "cole-mine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
bleasy = "0.3.1"
futures = "0.3.31"
log = "0.4.22"
time = "0.3.36"
tokio = { version = "1.41.1", features = ["full"] }
typed-builder = "0.20.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11.5"
insta = "1.41.1"
