[package]
name = "cole-mine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "crates/*"
]

[dependencies]
async-stream = "0.3.6"
bleasy = "0.3.1"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
typed-builder = "0.20.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
env_logger = "0.11.5"
insta = "1.41.1"
