[package]
name = "conveyor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
structsy = { version = "0.5.2", features = ["serde", "derive"] }
tempfile = "3.10"
time = { version = "0.3.36", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1.20", features = ["full"] }
tower-http = {version ="0.5", features = ["fs", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1.41.1"
