[package]
name = "fissure"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "3"
serde = { version = "1.0.215", features = ["derive"] }
structsy = { version = "0.5.2", features = ["serde", "derive"] }
time = { version = "0.3.36", features = ["serde", "parsing", "formatting", "serde-human-readable"] }

[dev-dependencies]
insta = "1.41"
serde_json = "1"
rayon = "1"
