[package]
name = "lode"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
cole-mine = { version = "0.1.0", path = "../.." }
futures = "0.3.31"
time = { version = "0.3.36", features = ["serde-human-readable", "parsing"] }
tokio = { version = "1.41.1", features = ["full"] }
