[package]
name = "lode"
version = "0.1.0"
edition = "2021"

[dependencies]
bleasy = "0.3.1"
clap = { version = "4.5.21", features = ["derive"] }
cole-mine = { version = "0.1.0", path = "../.." }
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
time = { version = "0.3.36", features = ["serde-human-readable", "parsing", "local-offset", "formatting", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
